Moved project files into backend folder

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -8,6 +8,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+backend/node_modules /
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
@@ -37,7 +39,7 @@ coverage
 .grunt
 
 .env
-.env.*.local
+.env.\*.local
 
 # Bower dependency directory (https://bower.io/)
 
