--- a/backend/.env.development.local
+++ b/backend/.env.development.local
@@ -1,5 +1,8 @@
 PORT = 3300
 NODE_ENV = 'development'
 
+CORS_ORIGIN = "http://localhost:5173"
+
 SESSION_SECRET_KEY=20000EDCBDKE222
 SHEET_DB = https://sheetdb.io/api/v1/iuhs46c0zlqyu
+GOOGLE_SHEET_URL =https://docs.google.com/spreadsheets/d/1O5xRGUnsvB_cFlKjaYMS4K0AlJDluevtWYXZbufxUTk/edit?gid=0#gid=0
