--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.2",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "googleapis": "^160.0.0",
+    "json2csv": "^6.0.0-alpha.2",
     "multer": "^2.0.2",
     "xlsx": "^0.18.5"
   },
