--- a/backend/.env.development.local
+++ b/backend/.env.development.local
@@ -1,7 +1,7 @@
 PORT = 3300
 NODE_ENV = 'development'
 
-CORS_ORIGIN = "http://localhost:5173"
+# CORS_ORIGIN = "http://localhost:5173"
 
 SESSION_SECRET_KEY=20000EDCBDKE222
 SHEET_DB = https://sheetdb.io/api/v1/iuhs46c0zlqyu
